# lmnotes

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml
.github/workflows/: ci.yml  release.yml
apps/desktop/: .npmrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  llm_config.rs  main.rs
apps/desktop/src/capture/: Capture.tsx
apps/desktop/src/chat/: ChatDrawer.tsx
apps/desktop/src/components/: FileTree.tsx
apps/desktop/src/editor/: Editor.tsx  RewriteMenu.tsx  solid-cm.ts
apps/desktop/src/i18n/: index.ts
apps/desktop/src/i18n/locales/: en.ts  zh.ts
apps/desktop/src/settings/: ProviderSettings.tsx
apps/desktop/src/store/: llm.ts  vault.ts
apps/desktop/src/suggestions/: SuggestionCenter.tsx
crates/lmnotes-cli/: Cargo.toml
crates/lmnotes-cli/src/: main.rs
crates/lmnotes-core/: Cargo.toml
crates/lmnotes-core/src/: error.rs  id.rs  lib.rs  vault.rs
crates/lmnotes-core/src/backend/: fs.rs  mod.rs
crates/lmnotes-core/src/index/: mod.rs  schema.rs  sqlite.rs  tantivy.rs
crates/lmnotes-core/src/indexer/: mod.rs
crates/lmnotes-core/src/llm/: guard.rs  mod.rs  ollama.rs  openai.rs  provider.rs  routing.rs  suggestion.rs
crates/lmnotes-core/src/okf/: concept.rs  frontmatter.rs  mod.rs  validator.rs
crates/lmnotes-core/src/qa/: context.rs  mod.rs  prompt.rs  retriever.rs
crates/lmnotes-core/src/search/: mod.rs  rrf.rs
crates/lmnotes-core/tests/: glm_happy_path.rs  glm_rag.rs  m1b_e2e.rs  m1b_integration.rs  okf_conformance.rs  round_trip.rs
crates/lmnotes-mcp/: Cargo.toml
crates/lmnotes-mcp/src/: lib.rs  server.rs
docs/: mcp-agent-integration.md  mcp-api.md  user-manual.md
docs/adr/: ADR-0001-okf-alignment.md  ADR-0002-tauri-core-boundary.md  ADR-0003-index-three-layer.md  ADR-0004-frontend-stack.md  ADR-0005-llm-provider-guardrails.md  README.md
docs/okf/: SPEC.v0.1.md
docs/release-notes/: release-notes-v0.1.0.md
docs/specs/: PRD.md
docs/superpowers/plans/: 2026-06-21-m0-okf-core.md  2026-06-22-m1a-editor-index.md  2026-06-22-m1b-llm-suggestions.md  2026-06-22-m1c-chat-rag.md
