[workspace]
members = [
    "crates/lmnotes-core",
    "crates/lmnotes-cli",
    "crates/lmnotes-mcp",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lmnotes/lmnotes"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2", features = [] }
rusqlite = { version = "0.40", features = ["bundled"] }
sqlite-vec = "0.1"
tantivy = "0.22"
jieba-rs = "0.7"
notify = "6"
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
