[package]
name = "lmnotes-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
pulldown-cmark = "0.13"
sha2 = "0.10"
async-trait = "0.1"
hex = "0.4"
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
