[package]
name = "lmnotes-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lmnotes-core = { path = "../lmnotes-core" }
rmcp = { version = "1.8", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "1"
futures-util = "0.3"
tracing = "0.1"
rand = "0.9"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
