[package]
name = "lmnotes-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "lmnotes_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lmnotes-core = { path = "../../../crates/lmnotes-core" }
tauri = { workspace = true, features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs"] }
dirs = "5"
chrono = "0.4"
notify = { workspace = true }
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
